feat: add more proxy groups

--- a/stash/stash.conf
+++ b/stash/stash.conf
@@ -95,6 +95,11 @@ proxy-groups:
       - 韩国节点
       - 狮城节点
       - 美国节点
+      - 阿根廷节点
+      - 马来西亚节点
+      - 土耳其节点
+      - 英国节点
+      - 印度节点
       - 其他节点
   - name: 海外节点
     type: fallback
@@ -105,6 +110,11 @@ proxy-groups:
       - 韩国节点
       - 狮城节点
       - 美国节点
+      - 阿根廷节点
+      - 马来西亚节点
+      - 土耳其节点
+      - 英国节点
+      - 印度节点
   - name: 国外网站
     type: select
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
@@ -118,6 +128,11 @@ proxy-groups:
       - 韩国节点
       - 狮城节点
       - 美国节点
+      - 阿根廷节点
+      - 马来西亚节点
+      - 土耳其节点
+      - 英国节点
+      - 印度节点
       - 其他节点
       - DIRECT
   - name: 香港节点
@@ -156,12 +171,42 @@ proxy-groups:
     use:
       - All
     filter: 美|🇺🇸|US|(?i)States|American
+  - name: 马来西亚节点
+    type: select
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Malaysia.png
+    use:
+      - All
+    filter: 马|Malaysia|🇲🇾
+  - name: 土耳其节点
+    type: select
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Turkey.png
+    use:
+      - All
+    filter: 土|Turkey|🇹🇷
+  - name: 阿根廷节点
+    type: select
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Argentina.png
+    use:
+      - All
+    filter: 廷|Argentina|🇦🇷
+  - name: 英国节点
+    type: select
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Argentina.png
+    use:
+      - All
+    filter: 英|UK|🇬🇧|(?i)United Kingdom
+  - name: 印度节点
+    type: select
+    icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/India.png
+    use:
+      - All
+    filter: 度|India|🇮🇳
   - name: 其他节点
     type: select
     icon: https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Server.png
     use:
       - All
-    filter: ^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|Tai|🇯🇵|日|JP|Japan|🇸🇬|坡|狮城|SG|Singapore|🇰🇷|韩|KR|KOR|Korea|🇺🇸|美|US|States|American).)*$
+    filter: ^((?!🇭🇰|港|HK|Hong|🇹🇼|台|TW|Tai|🇯🇵|日|JP|Japan|🇸🇬|坡|狮城|SG|Singapore|🇰🇷|韩|KR|KOR|Korea|🇺🇸|美|US|States|American|马|Malaysia|🇲🇾|土|Turkey|🇹🇷|廷|Argentina|🇦🇷|英|UK|🇬🇧|度|India|🇮🇳).)*$
 rule-providers:
   # 远程规则集
   Adblock:
@@ -275,4 +320,3 @@ rules:
   - RULE-SET,Lan,DIRECT
   - GEOIP,CN,国内网站
   - MATCH,国外网站
-
