feat: add custom direct rules

--- a/stash/stash.conf
+++ b/stash/stash.conf
@@ -293,17 +293,23 @@ rule-providers:
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.yaml"
     path: ./ruleset/lan.yaml
     interval: 86400
-  CustomRules: # 自定义扩展规则
-    type: http
+  CustomOversea: # 自定义需代理的规则
+    type: htt
     behavior: classical
-    url: "https://raw.githubusercontent.com/aiden0z/proxy-rules/main/stash/rules/CustomRules.yaml"
-    path: ./ruleset/CustomRules.yaml
+    url: "https://raw.githubusercontent.com/aiden0z/proxy-rules/main/stash/rules/Oversea.yaml"
+    path: ./ruleset/CustomOversea.yaml
+    interval: 86400
+  CustomDirect: # 自定义需代理的规则
+    type: htt
+    behavior: classical
+    url: "https://raw.githubusercontent.com/aiden0z/proxy-rules/main/stash/rules/Direct.yaml"
+    path: ./ruleset/CustomDirect.yaml
     interval: 86400
 rules:
   # 分流规则引用
   - RULE-SET,Adblock,REJECT
   # 自定义规则
-  - RULE-SET,CustomRules,海外节点
+  - RULE-SET,CustomOversea,海外节点
   - RULE-SET,Apple,国内网站
   - RULE-SET,Google,国外网站
   - RULE-SET,Microsoft,国内网站
@@ -318,5 +324,6 @@ rules:
   - RULE-SET,China,国内网站
   - RULE-SET,Global,国外网站
   - RULE-SET,Lan,DIRECT
+  - RULE-SET,CustomDirect,DIRECT
   - GEOIP,CN,国内网站
   - MATCH,国外网站
